# poliedro-GPT

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  print_oauth_config.py  pyproject.toml  render.yaml  requirements.txt
config/: config.example.json
docs/: chatgpt-setup.md  claude-desktop-config.example.json  claude-remote-setup.md  privacy-policy.html  privacy-policy.md
scripts/: export_config_json.py
src/poliedro_mcp/: __init__.py  api.py  api_auth.py  api_base.py  auth.py  cli.py  client.py  config_loader.py  logger.py  mcp_auth_provider.py  mcp_oauth_tokens.py  mcp_remote.py  mcp_tools.py  oauth_config.py  oauth_proxy.py  privacy_policy.py  profile_discovery.py  server.py  services.py  setup_login.py  user_context.py
